--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-        Physical Summon
+        Grow Castle Physical Summon Build Wave Calculator 
         </title>
         <style>
             body {background-color: #ffdb58;}
