--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
         Grow Castle Physical Summon Build Wave Calculator 
         </title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico?">
         <style>
             body {background-color: #ffdb58;}
             h3   {color: blue; text-align:center;}
