--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
         Grow Castle Physical Summon Build Wave Calculator 
         </title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="https://i.imgur.com/Q9c3x56.png">
         <style>
             body {background-color: #ffdb58;}
             h3   {color: blue; text-align:center;}
