--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </tr>       
             <tr>
                 <td>
-                    Dark Assassin 
+                    Dark Assassin / Sniper
                 </td>
                 <td>
                     <p id = "assassin"></p>
