--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Castle
                 </td>
                 <td>
-                    <p id = "castle"></p>
+                    <p id = "castle">-</p>
                 </td>
                 <td>
                     0.06
@@ -43,7 +43,7 @@
                     Giant
                 </td>
                 <td>
-                    <p id = "giant"></p>
+                    <p id = "giant">-</p>
                 </td>
                 <td>
                     0.05
@@ -53,7 +53,7 @@
                     Dark Bow Master
                 </td>
                 <td>
-                    <p id = "dbm"></p>
+                    <p id = "dbm">-</p>
                 </td>
                 <td>
                     0.05
@@ -65,7 +65,7 @@
                     Dark Assassin / Sniper
                 </td>
                 <td>
-                    <p id = "assassin"></p>
+                    <p id = "assassin">-</p>
                 </td>
                 <td>
                     0.04
@@ -76,7 +76,7 @@
                     Edward
                 </td>
                 <td>
-                    <p id = "edward"></p>
+                    <p id = "edward">-</p>
                 </td>
                 <td>
                     0.03
@@ -87,7 +87,7 @@
                     Dark Elf
                 </td>
                 <td>
-                    <p id = "elf"></p>
+                    <p id = "elf">-</p>
                 </td>
                 <td>
                     0.025
@@ -98,10 +98,10 @@
                     Death Worm II
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -109,10 +109,10 @@
                     Angel
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -120,10 +120,10 @@
                     Slinger
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -131,10 +131,10 @@
                     Dorothy
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -145,7 +145,7 @@
                     31
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -156,7 +156,7 @@
                     6
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -167,7 +167,7 @@
                     1
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -178,7 +178,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -189,7 +189,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -200,7 +200,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -211,7 +211,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
             <tr>
@@ -222,7 +222,7 @@
                     99 (Max)
                 </td>
                 <td>
-                    N/A
+                    -
                 </td>
             </tr>
         </table>
