--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <td>
                     Castle
                 </td>
-                <td>
-                    <p id = "castle">-</p>
+                <td id = "castle">
+                    N/A
                 </td>
                 <td>
                     0.06
@@ -42,8 +42,8 @@
                 <td>
                     Giant
                 </td>
-                <td>
-                    <p id = "giant">-</p>
+                <td id = "giant">
+                    N/A
                 </td>
                 <td>
                     0.05
@@ -52,8 +52,8 @@
                 <td>
                     Dark Bow Master
                 </td>
-                <td>
-                    <p id = "dbm">-</p>
+                <td id = "dbm">
+                    N/A
                 </td>
                 <td>
                     0.05
@@ -64,8 +64,8 @@
                 <td>
                     Dark Assassin / Sniper
                 </td>
-                <td>
-                    <p id = "assassin">-</p>
+                <td id = "assassin">
+                    N/A
                 </td>
                 <td>
                     0.04
@@ -75,8 +75,8 @@
                 <td>
                     Edward
                 </td>
-                <td>
-                    <p id = "edward">-</p>
+                <td id = "edward">
+                    N/A
                 </td>
                 <td>
                     0.03
@@ -86,8 +86,8 @@
                 <td>
                     Dark Elf
                 </td>
-                <td>
-                    <p id = "elf">-</p>
+                <td id = "elf">
+                    N/A
                 </td>
                 <td>
                     0.025
@@ -98,10 +98,10 @@
                     Death Worm II
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -109,10 +109,10 @@
                     Angel
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -120,10 +120,10 @@
                     Slinger
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -131,10 +131,10 @@
                     Dorothy
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -145,7 +145,7 @@
                     31
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -156,7 +156,7 @@
                     6
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -167,7 +167,7 @@
                     1
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -178,7 +178,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -189,7 +189,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -200,7 +200,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -211,7 +211,7 @@
                     21 (Max)
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
             <tr>
@@ -222,7 +222,7 @@
                     99 (Max)
                 </td>
                 <td>
-                    -
+                    N/A
                 </td>
             </tr>
         </table>
