--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             td   {padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; text-align: center;}
             .lratiolol {padding-left: 20px; padding-right: 20px;}
             .firtable {border-collapse:collapse;}
+            .damob {color: green;}
             </style>
     </head>
     <body>
@@ -31,7 +32,7 @@
                 <td>
                     Castle
                 </td>
-                <td id = "castle">
+                <td id = "castle" class = "damob">
                     N/A
                 </td>
                 <td>
@@ -42,7 +43,7 @@
                 <td>
                     Giant
                 </td>
-                <td id = "giant">
+                <td id = "giant" class = "damob">
                     N/A
                 </td>
                 <td>
@@ -52,7 +53,7 @@
                 <td>
                     Dark Bow Master
                 </td>
-                <td id = "dbm">
+                <td id = "dbm" class = "damob">
                     N/A
                 </td>
                 <td>
@@ -64,7 +65,7 @@
                 <td>
                     Dark Assassin / Sniper
                 </td>
-                <td id = "assassin">
+                <td id = "assassin" class = "damob">
                     N/A
                 </td>
                 <td>
@@ -75,7 +76,7 @@
                 <td>
                     Edward
                 </td>
-                <td id = "edward">
+                <td id = "edward" class = "damob">
                     N/A
                 </td>
                 <td>
@@ -86,7 +87,7 @@
                 <td>
                     Dark Elf
                 </td>
-                <td id = "elf">
+                <td id = "elf" class = "damob">
                     N/A
                 </td>
                 <td>
