--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             td   {padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; text-align: center;}
             .lratiolol {padding-left: 20px; padding-right: 20px;}
             .firtable {border-collapse:collapse;}
-            .damob {color: green;}
             </style>
     </head>
     <body>
@@ -33,7 +32,7 @@
                     Castle
                 </td>
                 <td id = "castle" class = "damob">
-                    N/A
+                    <font color="green">N/A</font>
                 </td>
                 <td>
                     0.06
@@ -44,7 +43,7 @@
                     Giant
                 </td>
                 <td id = "giant" class = "damob">
-                    N/A
+                    <font color="green">N/A</font>
                 </td>
                 <td>
                     0.05
@@ -54,7 +53,7 @@
                     Dark Bow Master
                 </td>
                 <td id = "dbm" class = "damob">
-                    N/A
+                    <font color="green">N/A</font>
                 </td>
                 <td>
                     0.05
@@ -66,7 +65,7 @@
                     Dark Assassin / Sniper
                 </td>
                 <td id = "assassin" class = "damob">
-                    N/A
+                    <font color="green">N/A</font>
                 </td>
                 <td>
                     0.04
@@ -77,7 +76,7 @@
                     Edward
                 </td>
                 <td id = "edward" class = "damob">
-                    N/A
+                    <font color="green">N/A</font>
                 </td>
                 <td>
                     0.03
@@ -88,7 +87,7 @@
                     Dark Elf
                 </td>
                 <td id = "elf" class = "damob">
-                    N/A
+                    <font color="green">N/A</font>
                 </td>
                 <td>
                     0.025
