--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 var relf = 0.025;
                 var wave = parseInt(document.getElementById("wave").value);
                 
-                document.getElementById("castle").innerHTML = Math.round(rcastle*wave);
+                document.getElementById("castle").innerHTML = <font color="green">Math.round(rcastle*wave)</font>;
                 document.getElementById("giant").innerHTML = Math.round(rgiant*wave);
                 document.getElementById("dbm").innerHTML = Math.round(rdbm*wave);
                 document.getElementById("assassin").innerHTML = Math.round(rassassin*wave);
